# libusbd

./: .gitignore  LICENSE  Makefile  Makefile.linux  README.md  build.sh  build_linux.sh  libusbd.c  libusbd.h
bindings_rust/: Cargo.toml  build.rs  build.sh  wrapper.h
bindings_rust/src/: context.rs  error.rs  lib.rs
examples/gamepad/: Makefile  main.c
examples/keyboard/: Makefile  main.c
examples/nintendo_mitm/: HIDReportData.h  Makefile  main.cpp
examples/nintendo_mitm/btle_tests/: ns2_common_enums.py  ns2_controller.py  test_basic.py
examples/rust_async/: Cargo.toml
examples/rust_async/src/: main.rs
examples/rust_kvm/: Cargo.toml  build_linux.sh
examples/rust_kvm/src/: main.rs
examples/rust_nintendo/: Cargo.toml  build.sh  build_linux.sh
examples/rust_nintendo/src/: main.rs
examples/rust_splatpost/: Cargo.toml  build.rs  build_linux.sh
examples/rust_splatpost/src/: main.rs
examples/ums/: Makefile  main.c  types.h  utils.c  utils.h
include/: libusbd.h
plat/macos/: alt_IOUSBDeviceControllerLib.c  alt_IOUSBDeviceControllerLib.h  impl.c  impl.h
src/: libusbd.c  libusbd_priv.h
src/plat/linux/: impl.c  impl.h  impl_priv.h
src/plat/macos/: alt_IOUSBDeviceControllerLib.c  alt_IOUSBDeviceControllerLib.h  impl.c  impl.h  impl_priv.h
